LPS-67386 SF